Fix card height to stretch, small style fixes

--- a/css/styles.css
+++ b/css/styles.css
@@ -80,12 +80,13 @@ hr {
   border-top: 1px solid #D0D0D0;
 }
 
-/* Same card height for all cards in the row. N.B. doesn't work if col and card data in separate divs */
-/* .row {
+/* Same card height for all cards in the row. */
+.row {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   align-items: stretch;
-} */
+}
 
 .row::after {
   content: "";
@@ -97,7 +98,6 @@ hr {
 [class*="col-"] {
   width: 100%;
   float: left;
-  /* border: 1px solid red; */
   padding: 10px;
 }
 
@@ -151,6 +151,7 @@ hr {
 
 .card {
   background-color: #F2F2F2;
+  height: 100%;
 }
 
 .card-text p {
@@ -303,7 +304,7 @@ section {
 }
 
 .menu-icon {
-  background-color: #40475A;
+  background-color: #383E4C;
   border: 1px solid #646d7c;
   border-radius: 10%;
   cursor: pointer;
@@ -384,6 +385,8 @@ section {
     font-size: 1.3rem; /*1.5*/
   }
 }
+
+
 /*** Desktop navigation menu ends ***/
 
 /***************** 2. Top Heading *******************/
